--- a/QuantifyThisAppEngine/war/css/style.css
+++ b/QuantifyThisAppEngine/war/css/style.css
@@ -94,11 +94,8 @@ a {
   background: url(../images/list-line.png) no-repeat;
   padding-top:5px;
 }
-#authorize-button-calendar{
+#authorize-button-calendar, #authorize-button-appengine{
     display: none;
-}
-#authorize-button-appengine{
-    display: block;
 }
 .ui-grid-solo .ui-slider{
     margin:10px 0px!important;
@@ -108,4 +105,14 @@ label, input{
 }
 #slider-many-hours .ui-slider-input{
     display:inline !important;
+}
+#heartrate_label{
+    font-size: 80px;
+    float:left;
+}
+#bpmspan{
+    float:left;
+    color:darkred;
+    font-size: 30px;
+    vertical-align: top;
 }
